# jdiamond

./: .gitignore  .travis.yml  README.md  bigfountain.json  build-cdiamond  diamondtojson  game.js  install_deps  jdiamond.js  make-cdiamond  package.json  pairstojson  rundemos.sh  smallfountain.json
CDiamond/include/: CD_Engine2D.h  CD_Game2D.h  CD_Renderer2D.h  CD_Transform2.h  CD_typedefs.h
CDiamond/src/: CD_Engine2D.cpp  CD_Renderer2D.cpp  CD_Transform2.cpp
cDiamond/: CDiamond.cpp  CDiamond.h  CMakeLists.txt
demos/: game.js
demos/assets/: Thumbs.db
demos/jet/: flight.js  jetstreamparticles.json
demos/particles/: bigfountain.json  biggerfountain.json  particles.js  particleseverywhere.json  smallfountain.json
demos/turret/: turret.js
src/: build-cdiamond  make-cdiamond
src/CDiamond/: CMakeLists.txt
src/CDiamond/include/: CD_Animation2D.h  CD_Config.h  CD_DebugDrawer.h  CD_Engine2D.h  CD_Game2D.h  CD_ParticleSystem2D.h  CD_Physics2D.h  CD_Renderer2D.h  CD_Transform2.h  CD_Util.h  CD_typedefs.h
src/CDiamond/lib/darwin/: libCDiamond.dylib
src/CDiamond/src/: CD_Animation2D.cpp  CD_Config.cpp  CD_DebugDrawer.cpp  CD_Engine2D.cpp  CD_Game2D.cpp  CD_ParticleSystem2D.cpp  CD_Physics2D.cpp  CD_Renderer2D.cpp  CD_Transform2.cpp  CD_Util.cpp
src/CDiamond/test/: CMakeLists.txt  test.cpp
test/: test.js
